feat: added Swagger docs
