# swagger.json
@@ -5,16 +5,12 @@
     "version": "1.0.0",
     "title": "Swagger Petstore"
   },
-  "host": "https://software-architecture-22.herokuapp.com/",
+  "host": "https://software-architecture-22.herokuapp.com",
   "basePath": "/api",
   "tags": [
     {
       "name": "users",
       "description": "CRUD operations about users"
-    },
-    {
-      "name": "messages",
-      "description": "CRUD operations about user's messages"
     }
   ],
   "schemes": [
@@ -43,14 +39,28 @@
             "description": "User object that needs to be added to the database",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "type": "object",
+              "properties": {
+                "email": { "type": "string", "format": "email" },
+                "username": { "type": "string" },
+                "password": { "type":  "string", "format": "password"},
+                "name": { "type": "string" },
+                "surname": { "type": "string" },
+                "bio": { "type": "string" }
+              },
+              "required": [
+                "email",
+                "username",
+                "name",
+                "surname"
+              ]
             }
           }
         ],
         "responses": {
-          "405": {
-            "description": "Invalid input"
-          }
+          "201": { "description": "Ok"},
+          "400": { "description": "Bad Request" },
+          "500": { "description": "Internal server error"}
         }
       }
     },
@@ -75,18 +85,11 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          },
-          "400": {
-            "description": "Invalid username supplied"
-          },
-          "404": {
-            "description": "User not found"
-          }
+          "200": { "description": "successful operation", "schema": {"$ref": "#/definitions/User"}},
+          "400": { "description": "Bad Request" },
+          "403": { "description": "Unauthorized request"},
+          "404": { "description": "User not found" },
+          "500": { "description": "Internal server error"}
         }
       },
       "put": {
@@ -118,12 +121,10 @@
           }
         ],
         "responses": {
-          "400": {
-            "description": "Invalid user supplied"
-          },
-          "404": {
-            "description": "User not found"
-          }
+          "200": { "description": "successful operation", "schema": {"$ref": "#/definitions/User"}},
+          "403": { "description": "Unauthorized request"},
+          "404": { "description": "User not found" },
+          "500": { "description": "Internal server error"}
         }
       },
       "delete": {
@@ -146,173 +147,10 @@
           }
         ],
         "responses": {
-          "400": {
-            "description": "Invalid username supplied"
-          },
-          "404": {
-            "description": "User not found"
-          }
-        }
-      }
-    },
-    "/user/{username}/messages": {
-      "post": {
-        "tags": [
-          "messages"
-        ],
-        "summary": "Add a new message to the database",
-        "description": "",
-        "operationId": "addMessage",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "username that created the message",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Message object that needs to be added to the database",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Message"
-            }
-          }
-        ],
-        "responses": {
-          "405": {
-            "description": "Invalid input"
-          }
-        }
-      }
-    },
-    "/user/{username}/messages/{id}": {
-      "get": {
-        "tags": [
-          "messages"
-        ],
-        "summary": "Get message by id",
-        "description": "",
-        "operationId": "getMessageById",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "The name that needs to be fetched.",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The id of the message that needs to be fetched.",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Message"
-            }
-          },
-          "400": {
-            "description": "Invalid message supplied"
-          },
-          "404": {
-            "description": "Message not found"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "messages"
-        ],
-        "summary": "Update message",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "updateMessage",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "username that need to be updated",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The id of the message that needs to be updated.",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Updated message object",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Message"
-            }
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Invalid message supplied"
-          },
-          "404": {
-            "description": "Message not found"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "messages"
-        ],
-        "summary": "Delete message",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "deleteMessage",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "The name that needs to be deleted",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The id of the message that needs to be deleted.",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Invalid message supplied"
-          },
-          "404": {
-            "description": "Message not found"
-          }
+          "204": { "description": "The server has fulfilled the request but does not need to return a response body."},
+          "403": { "description": "Unauthorized request"},
+          "404": { "description": "User not found" },
+          "500": { "description": "Internal server error"}
         }
       }
     }
@@ -321,50 +159,17 @@
     "User": {
       "type": "object",
       "properties": {
-        "email": {
-          "type": "string",
-          "format": "email"
-        },
-        "username": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        },
-        "surname": {
-          "type": "string"
-        },
-        "bio": {
-          "type": "string"
-        }
+        "email": { "type": "string", "format": "email" },
+        "username": { "type": "string" },
+        "name": { "type": "string" },
+        "surname": { "type": "string" },
+        "bio": { "type": "string" }
       },
       "required": [
         "email",
         "username",
         "name",
         "surname"
-      ]
-    },
-    "Message": {
-      "type": "object",
-      "properties": {
-        "user": {
-          "type": "object"
-        },
-        "date": {
-          "type": "string",
-          "format": "date"
-        },
-        "likes": {
-          "type": "number"
-        },
-        "text": {
-          "type": "string"
-        }
-      },
-      "required": [
-        "user",
-        "text"
       ]
     }
   }
