# users/users_schemas.js
@@ -1,11 +1,11 @@
 const mongoose = require('mongoose');
 
 const UserSchema = new mongoose.Schema({
-    email: String,
-    username: String,
-    name: String,
-    surname: String,
-    bio: String
+    email: { type: String, required: true, index: { unique: true}},
+    username: { type: String, required: true, index: { unique: true}},
+    name: { type: String, required: true},
+    surname: { type: String, required: true},
+    bio: { type: String }
 });
 mongoose.model('User', UserSchema);
 
